implementations/rust/ockam/ockam/tests/node_attribute/fails_if_function_is_not_async.stderr
error: a function tagged with '#[ockam::node]' must be declared as 'async'
 --> $DIR/fails_if_function_is_not_async.rs:5:1
  |
5 | fn main() {}
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fails_if_function_is_not_async.rs:4:1
  |
4 | / #[ockam::node]
5 | | fn main() {}
  | |____________^ consider adding a `main` function to `$DIR/tests/node_attribute/fails_if_function_is_not_async.rs`
